# website-metering-tool

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  alerting_test  cmake_install.cmake  input.txt  website_metering  website_metering.cbp
src/: const.hpp  file.hpp  server.cpp  server.hpp
src/database/: aggregate_builder.hpp  database.hpp  logger.hpp  reporter.hpp
src/helpers/: time_helper.hpp
src/messages/: server_init_message.hpp
src/parsers/: input_parser.hpp
src/reporters/: reporter.hpp
src/structs/: aggregate.hpp  agregate.hpp  cron_website.hpp  curl_response.hpp  timeframe.hpp
tests/: alerting_test.cpp
